# gewu

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: benchmark_sample.jsonl
docs/: architecture.md
docs/examples/: 600519_mock_demo.md  600519_pit_2025-04-15_demo.md  600519_real_deepseek_demo.md
docs/research/: 2026-06-deep-research-金融研究分析Agent调研报告.md  supplement-commercial-products-hiring.md  supplement-commercial-products.md  supplement-data-sources.md
src/gewu/: __init__.py  cli.py  config.py  llm.py
src/gewu/agents/: __init__.py  context.py  fact_check.py  graph.py  nodes.py  pipeline.py  prompts.py  state.py
src/gewu/data/: __init__.py  akshare_source.py  bundle.py  cache.py  cninfo_source.py  edgar_source.py  indicators.py  pit.py  service.py  yahoo_source.py
src/gewu/evaluate/: __init__.py  backtest.py  benchmark.py  metrics.py  universe.py
src/gewu/rag/: __init__.py  qa.py  retriever.py  store.py
src/gewu/report/: __init__.py  builder.py  charts.py
tests/: conftest.py  test_benchmark.py  test_data_layer.py  test_edgar.py  test_evaluate.py  test_fact_check.py  test_llm.py  test_peers.py  test_pipeline.py  test_pit.py  test_rag.py  test_review_fixes.py
tests/fixtures/cache/ashare/600519/: daily.meta.json  daily.parquet  financial_abstract.meta.json  financial_abstract.parquet  financial_indicators.meta.json  financial_indicators.parquet  news.meta.json  news.parquet  profile.meta.json  profile.parquet  report_dates.meta.json  report_dates.parquet  (+2 more)
