[project]
name = "gewu"
version = "0.2.0"
description = "格物 (Gewu) — A股优先的金融研究多智能体框架：分析师团队 + 多空辩论 + 数字溯源核查 + 防泄漏 Point-in-Time 评测"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Young-1231", email = "huangfeiyang1231@gmail.com" }
]
keywords = ["llm", "agent", "finance", "a-share", "equity-research", "langgraph"]
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.64",
    "baostock>=0.9.2",
    "jieba>=0.42.1",
    "langgraph>=1.2.4",
    "matplotlib>=3.10.9",
    "openai>=2.41.1",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "rich>=15.0.0",
    "typer>=0.26.7",
    "yfinance>=1.4.1",
]

[project.scripts]
gewu = "gewu.cli:app"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/gewu/cli.py" = ["B008"]  # typer.Option 在参数默认值中是该框架的标准用法

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
